# Megakino-mega-downloder

./: LICENSE  README.md  anleitung.md  pyproject.toml
megakino/: __init__.py  main.py
megakino/api/: client.py  scraper.py
megakino/api/extractors/: megakino.py  voe.py
megakino/cli/: app.py
megakino/cli/actions/: download.py  syncplay.py  watch.py
megakino/core/: config.py  dependencies.py  models.py  streams.py
