[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "megakino-mega-downloader"
version = "1.2.2"
authors = [
  { name="cali72mero" },
]
description = "The ultimate Mega Downloader for Megakino & VOE - Faster, Safer, Better!"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    'yt-dlp',
    'httpx',
    'beautifulsoup4',
    'fake_useragent',
    'rich',
    'InquirerPy',
    'appdirs',
    'cachetools'
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/cali72mero/Megakino-mega-downloder"
Issues = "https://github.com/cali72mero/Megakino-mega-downloder/issues"
[project.scripts]
megakino = "megakino.main:main"
mega-downloader = "megakino.main:main"

[tool.hatch.build.targets.wheel]
packages = ["megakino"]