[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "megakino-mega-downloader"
version = "1.2.6"
authors = [
  { name="cali72mero" },
]
description = "A modern terminal media workflow demo with search, playback helpers, and download orchestration."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
dependencies = [
    'yt-dlp',
    'httpx',
    'beautifulsoup4',
    'fake_useragent',
    'rich',
    'InquirerPy',
    'appdirs',
    'cachetools'
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
]
keywords = ["cli", "media", "terminal", "rich"]

[project.urls]
Homepage = "https://github.com/cali72mero/Megakino-mega-downloder"
Issues = "https://github.com/cali72mero/Megakino-mega-downloder/issues"
[project.scripts]
megakino = "megakino.main:main"
mega-downloader = "megakino.main:main"

[tool.hatch.build.targets.wheel]
packages = ["megakino"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
